[ui] add imgui config file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -144,6 +144,10 @@ VS_RegisterFiles("${CERES_SOURCES}")
 file(COPY ${CMAKE_SOURCE_DIR}/PlanetLab/res
   DESTINATION ${CMAKE_BINARY_DIR})
 
+# copy imgui config ini file
+file(COPY ${CMAKE_SOURCE_DIR}/imgui.ini
+DESTINATION ${CMAKE_BINARY_DIR})
+
 # /////////////////////////////////////////////////////////////////////////////
 # ////////////////////////// PRECOMPILED HEADERS //////////////////////////////
 # /////////////////////////////////////////////////////////////////////////////
