[ui] rename header tab settings

--- a/imgui.ini
+++ b/imgui.ini
@@ -20,7 +20,7 @@ Size=1455,147
 Collapsed=0
 DockId=0x00000005,0
 
-[Window][Procedural Planets Settings]
+[Window][Settings]
 Pos=1457,19
 Size=463,1061
 Collapsed=0
