[all] add description on hover and refactor parameters

--- a/PlanetLab/res/scene/Dagoba.ini
+++ b/PlanetLab/res/scene/Dagoba.ini
@@ -4,7 +4,7 @@ count=2
 type=simple
 seed=1659715846
 strength=0.333000
-layerscount=4
+iterations=4
 baseroughness=1.077000
 roughness=2.238000
 persistence=0.500000
@@ -17,7 +17,7 @@ weightmultiplier=0.500000
 type=rigid
 seed=1659715846
 strength=0.571000
-layerscount=5
+iterations=5
 baseroughness=2.774000
 roughness=3.429000
 persistence=0.869000
