--- a/PlanetLab/res/scene/Ubi.ini
+++ b/PlanetLab/res/scene/Ubi.ini
@@ -4,7 +4,7 @@ count=2
 type=simple
 seed=1529471721
 strength=0.178000
-layerscount=2
+iterations=2
 baseroughness=1.269000
 roughness=3.223000
 persistence=0.482000
@@ -17,7 +17,7 @@ weightmultiplier=0.500000
 type=rigid
 seed=1529471721
 strength=1.472000
-layerscount=4
+iterations=4
 baseroughness=3.249000
 roughness=2.000000
 persistence=0.500000
